# notecrumbs

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  TODO  shell.nix
.beads/: issues.jsonl
.github/workflows/: rust.yml
assets/: damus.css
html_templates/: note.hbs  output.css  profile.hbs  tailwind.config.js
src/: abbrev.rs  error.rs  fonts.rs  gradient.rs  html.rs  main.rs  nip19.rs  pfp.rs  relay_pool.rs  render.rs  sitemap.rs  timeout.rs  unknowns.rs
